try to fix pb with dropdown menu when collapsed can't scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,6 +148,8 @@ p {
     height: auto;
     max-height: 90vh;
     overflow-x: hidden;
+    overflow-y: scroll;
+
 }
 
 /*.nav, .navbar-nav, .navbar-right {
